<resources>
    <string name="app_name">飘爱</string>
    <string name="login_username_hint">手机号</string>
    <string name="password">密码</string>
    <string name="login">登录</string>
    <string name="remember_pwd">记住密码</string>
    <string name="forget_pwd">忘记密码？</string>
    <string name="register_new_user"><u>快速注册</u></string>
    <string name="reset_pwd">重置密码</string>
    <string name="air_detected">空气检测</string>
    <string name="check_code">短信验证码</string>
    <string name="get_check_code">获取验证码</string>
    <string name="next_step">下一步</string>
    <string name="register">注册</string>
    <string name="register_user">注册用户</string>
    <string name="phone_num">手机号</string>
    <string name="register_piaoai_account">注册飘爱账号</string>
    <string name="device_list">设备列表</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="temperature">温度</string>
    <string name="humidity">湿度</string>

</resources>
