<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".activity.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:orientation="vertical">

        <ImageView
            android:layout_marginTop="50dp"
            android:src="@mipmap/logo"
            android:layout_width="match_parent"
            android:layout_height="100dp" />

        <LinearLayout
            android:layout_marginTop="50dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_bg"
            android:padding="2dp">
            <ImageView
                android:id="@+id/userIc"
                android:layout_marginStart="5dp"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center"
                android:src="@mipmap/user_gray"/>
            <EditText
                android:inputType="phone"
                android:id="@+id/phoneEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login_username_hint"
                android:padding="12dp"
                android:background="@android:color/white"
                android:textCursorDrawable="@drawable/cursor"
                android:maxLines="1"
                android:textColorHint = "#999999"/>

        </LinearLayout>


        <LinearLayout
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_bg"
            android:padding="2dp">
            <ImageView
                android:id="@+id/lockIc"
                android:layout_marginStart="5dp"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center"
                android:src="@mipmap/lock_gray"/>
            <EditText
                android:inputType="textPassword"
                android:id="@+id/pwdEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:padding="12dp"
                android:background="@android:color/white"
                android:textCursorDrawable="@drawable/cursor"
                android:maxLines="1"
                android:textColorHint = "#999999"/>

        </LinearLayout>


        <RelativeLayout
            android:id="@+id/checkLayout"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp">
            <ImageView
                android:id="@+id/checkImageView"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@mipmap/checked"
                android:layout_centerVertical="true"/>

            <TextView
                android:layout_marginStart="5dp"
                android:layout_toRightOf="@id/checkImageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="记住密码"/>
        </RelativeLayout>


        <Button
            android:id="@+id/loginBtn"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/button_bg_gray_blue"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="18sp"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp">
            <!--<android.support.v7.widget.AppCompatCheckBox-->
            <!--android:id="@+id/rememberCheckBox"-->
            <!--android:layout_alignParentStart="true"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:text="@string/remember_pwd"-->
            <!--android:textColorHint="@android:color/holo_green_dark"/>-->

            <TextView
                android:id="@+id/registerTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:text="@string/register_new_user"
                android:textColor="@color/base_color_gray_blue" />

            <TextView
                android:id="@+id/forgetTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:text="@string/forget_pwd"
                android:textColorLink="#ff00ff" />
        </RelativeLayout>




        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:visibility="gone">
            <ImageButton
                android:id="@+id/weChatBtn"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="#55ff55"/>
            <ImageButton
                android:id="@+id/qqBtn"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="#ff5555" />
            <ImageButton
                android:id="@+id/weiboBtn"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="#5555ff"/>
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
