<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".activity.ForgetActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/base_color_gray_blue"
        >

        <ImageButton
            style="@style/Base.Widget.AppCompat.Button.Borderless"
            android:layout_width="50dp"
            android:layout_height="48dp"
            android:onClick="back"
            android:src="@mipmap/arrow_left" />

        <com.rthc.freshair.view.FZCustomTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/reset_pwd"
            android:textColor="@android:color/white"
            android:textSize="18sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_alignParentBottom="true"
            android:background="@android:color/darker_gray" />


    </RelativeLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:layout_margin="30dp"
        android:orientation="vertical"
        android:paddingBottom="30dp">

        <TextView
            android:layout_marginTop="50dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="找回密码"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_bg"
            android:padding="2dp">
            <ImageView
                android:id="@+id/userIc"
                android:layout_marginStart="5dp"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center"
                android:src="@mipmap/user_gray"/>
            <EditText
                android:id="@+id/phoneEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login_username_hint"
                android:padding="12dp"
                android:inputType="phone"
                android:background="@android:color/white"
                android:textCursorDrawable="@drawable/cursor"
                android:maxLines="1"
                android:textColorHint = "#999999"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:padding="2dp"
                android:layout_height="match_parent"
                android:background="@drawable/edit_text_bg">
                <ImageView
                    android:id="@+id/mailIc"
                    android:layout_marginStart="5dp"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_gravity="center"
                    android:src="@mipmap/mail_gray"/>
                <EditText
                    android:id="@+id/checkCodeEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/check_code"
                    android:padding="12dp"
                    android:background="@android:color/white"
                    android:textCursorDrawable="@drawable/cursor"
                    android:layout_gravity="center"
                    android:maxLines="1"
                    android:textColorHint = "#999999"/>

            </LinearLayout>

            <Button
                android:onClick="getCheckCodeBtnOnClick"
                android:id="@+id/getCheckCodeBtn"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_margin="2dp"
                android:layout_gravity="center"
                style="@style/Base.Widget.AppCompat.Button.Borderless"
                android:background="@drawable/button_bg_gray_blue"
                android:text="获取验证码"
                android:textColor="@android:color/white"/>
        </LinearLayout>

        <Button
            android:onClick="nextBtnOnClick"
            android:id="@+id/nextBtn"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="80dp"
            android:background="@drawable/button_bg_gray_blue"
            android:text="@string/next_step"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="18sp" />


    </LinearLayout>

</RelativeLayout>
